# url-parser-bnbong

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  setup.cfg
dataset/: README.md
db/: init_db.py  phishing_sites_20240917_082423.db-journal
helper/: exceptions.py
logger/: logger.py
parser/: parser.py
scripts/: local_setup.sh  local_setup_venv.sh
test/: test_parser.py
