[tool.poetry]
name = "url-parser-bnbong"
version = "0.1.0"
description = ""
authors = ["bnbong <bbbong9@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.1"
selenium = "^4.24.0"
black = "^24.8.0"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
pandas = "^2.2.2"
webdriver-manager = "^4.0.2"
pylint = "^3.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
